vcs/specs/parser/fail/declarations/missing_fn_name.vr
// @test: parse-fail
// @level: L0
// @tags: parser, declarations, function, error
// @description: Test missing function name detection
// @expected-error: E030

fn () {
    let x = 1;
}
